fix(footer): center align navigation items on mobile (#1002)

--- a/projects/ng-aquila/src/footer/footer.scss
+++ b/projects/ng-aquila/src/footer/footer.scss
@@ -39,6 +39,7 @@
         text-align: center;
         align-self: center;
         flex-direction: column;
+        align-items: center;
     }
 
     & .nx-footer__link {
